--- a/css/style.css
+++ b/css/style.css
@@ -179,14 +179,14 @@ section{
     box-shadow: var(--box-shadow);
 }
 
-.header .header-1 .search-form label{
+.header .header-1 .search-form button{
     font-size: 2.5rem;
     padding-right: 1.5rem;
     color: var(--black);
     cursor: pointer;
 }
 
-.header .header-1 .search-form label:hover{
+.header .header-1 .search-form button:hover{
     color: var(--green);
 }
 
