--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,34 @@ section{
     background: var(--dark-red);
 }
 
+.message{
+    position: sticky;
+    top:0;
+    margin:0 auto;
+    max-width: 1200px;
+    background-color: var(--white);
+    padding:2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 10000;
+    gap:1.5rem;
+ }
+
+ .message span{
+    font-size: 2rem;
+    color:var(--black);
+ }
+
+ .message i{
+    cursor: pointer;
+    color:var(--green);
+    font-size: 2.5rem;
+ }
+
+ .message i:hover{
+    transform: rotate(90deg);
+ }
 
 /* header 1 */
 
@@ -833,46 +861,69 @@ section{
 
 /*---------------------- arrivals ---------------------- starts */
 
-.arrivals .arrivals-slider .box{
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
-    padding: 2rem 1rem;
-    border: var(--border);
-    margin: 1rem 0;
-    box-shadow: var(--box-shadow);
+.arrivals .box-container{
+    max-width: 1200px;
+    margin:0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 33rem);
+    align-items: flex-start;
+    gap:2rem;
+    justify-content: center;
+    padding-top: 2.5rem;
+}
+.arrivals .box-container .box {
     border-radius: .5rem;
+    background-color: var(--white);
+    box-shadow: var(--box-shadow);
+    padding:1.2rem;
+    text-align: center;
+    border:var(--border);
+    position: relative;
 }
 
-.arrivals .arrivals-slider .box:hover{
+.arrivals .box-container .box:hover{
     border: var(--border-hover);
 }
 
-.arrivals .arrivals-slider .box .image img{
-    height: 15rem;
+.arrivals .box-container .box .image {
+    height: 32rem;
 }
 
-.arrivals .arrivals-slider .box .content h3{
+.arrivals .box-container .box:hover img{
+    transform: scale(0.9);
+}
+
+.arrivals .box-container .box .name {
+    padding:1rem 0;
     font-size: 1.9rem;
-    color: var(--black);
+    color:var(--black);
+    font-weight: bold;
 }
 
-.arrivals .arrivals-slider .box .content .price{
-    font-size: 2rem;
-    color: var(--black);
-    padding-bottom: .5rem;
-
+.arrivals .box-container .box .qty{
+    width: 100%;
+    padding: 0.5em;
+    border-radius: .5rem;
+    border:var(--border);
+    margin:1rem 0;
+    text-align: center;
+    font-size: 1.6rem;
 }
 
-.arrivals .arrivals-slider .box .content .price span{
-    font-size: 1.3rem;
+.arrivals .box-container .box .price {
+    position: absolute;
+    top:1rem; left:1rem;
+    border-radius: 50%;
+    padding:1rem;
+    font-size: 2.5rem;
+    color:var(--white);
+    background-color: crimson;
+}
+
+.arrivals .box-container .box .price_2{
+    font-size: 1.8rem;
     color: var(--light-color);
     text-decoration: line-through;
-}
-
-.arrivals .arrivals-slider .box .content .stars i{
-    font-size: 1.5rem;
-    color: var(--green);
 }
 
 /*---------------------- arrivals ----------------------end */
