--- a/css/style.css
+++ b/css/style.css
@@ -1316,7 +1316,449 @@ section{
 
 /* -------- place orders     */
 
+/*------------------------productdetail-------*/
 
+
+.product-content {
+    display: flex;
+    justify-content: space-between; 
+    width: 100%;
+    grid-template-columns: 2fr 1fr;
+
+}
+
+.product-content-left{
+    width: 40%;  
+   /* display: flex;
+  justify-content: space-between;
+*/
+}
+.product-content-left-big-img{
+    width: 80%;   
+    padding-right: 20px;
+    box-shadow: var(--box-shadow);
+    
+}
+.product-content-left-big-img img{
+    width: 100%;
+}
+.product-content-left-small-img{
+    width: 20%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+    cursor: pointer;
+}
+.product-content-left-small-img img{
+    margin-right: 15px;
+    width: 100%;
+}
+.product-content-right{
+    width: 60%;
+   }
+.product-content-right-product-name h1{
+/*    font-family: var(--main-text-font);
+*/    font-size: 30px;
+}
+.product-content-right-product-name p{
+    color: gray;
+    font-size: 15px;
+}
+
+.product-content-right-product-feeback {
+    display: flex;
+    font-size: 15px;
+    background:#ECECEC ;
+    height: 40px;
+    align-items: center;
+    font-weight: bold;
+    margin-top: 10px;
+    padding: .8rem;
+}
+.product-content-right-product-feeback div {
+    margin-right: 10px;
+}
+.product-content-right-product-feeback small{
+    color: gray;
+}
+.product-content-right-product-star i{
+    color:#ee4d2d;
+}
+.product-content-right-product-price{
+    font-size: 15px;
+    font-weight: bold;
+    display: flex;
+    background: linear-gradient(#E6F1D8,#F0FFF0); 
+    height: 60px;
+    align-items: center;
+    padding: 1rem;
+}
+.cost{
+    font-size: 2rem;
+    text-decoration: line-through;
+    color: #929292;
+    padding:0 1rem 0 0;
+    
+}
+.price{
+    font-size: 2.7rem;
+    color: #ee4d2d;
+}
+.sale{
+    font-size: 1.7rem;
+    color: #fff;
+    background: #ee4d2d;
+    border-radius: 2px;
+    padding: 0 .5rem 0 .5rem;
+    margin-left: 1.5rem;
+    
+}
+.product-content-right-product-deal{
+    display: flex;
+    margin-bottom: 20px;
+    font-size: 15px;
+    margin-top: 25px;
+}
+.product-content-right-product-deal p{
+    color: gray;   
+    margin-right: 36px;
+}
+.product-content-right-product-deal div{
+    background: #FFE4E1;
+    color: #ee4d2d;
+    padding: .2rem 1rem .2rem 1rem;
+    cursor: pointer;
+}
+.quantity {
+    display: flex;
+    margin-bottom: 20px;
+    font-size: 15px;
+    margin-top: 25px;
+}
+.quantity p{
+    color: gray;
+    margin-right: 25px;
+
+}
+.quantity input{
+    width: 40px;
+    /* padding-left: 8px; */
+    /* margin-left: 5px; */
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 15px;
+    text-align: center;
+    margin-right: 25px;
+}
+.product-content-right-product-button{
+    display: flex;
+}
+.product-content-right-product-button button{
+    height: 45px;
+    /* display: block; */
+    /* margin: 20px 0 12px; */
+    transition: all 0.3s ease;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 3px;
+    cursor: pointer;   
+    margin-right: 20px;    
+    margin-top: 10px;
+    font-size: 1.5rem;
+    padding: .9rem;
+}
+.cart{
+    width: 180px;
+    border: 2px solid #ee4d2d;
+    background-color: #FFE4E1;
+}
+.buy{
+    width: 130px;
+    border: 2px solid #ee4d2d;
+    background-color: #ee4d2d;
+}
+
+.product-content-right-product-button button:hover{
+    background-color: #C82E31;
+    color: white;
+}
+.product-content-right-product-icon{
+    display: flex;
+    position: relative;
+}
+.product-content-right-product-icon-item{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    padding: .6rem;
+    text-align: center;
+    justify-content: center;
+}
+.product-content-right-product-icon-item a{
+    color: var(--black);
+    font-size: 1.5rem;
+    padding: 1.3rem 1.5rem;
+}
+.product-content-right-product-icon-item i {
+    cursor: pointer;
+    display: inline;
+}
+
+
+.product-content-bottom{
+    margin-top: 70px;
+    border-top: 1px groove white;
+    position: relative;
+}
+.product-content-bottom-top{
+    position: absolute;
+    left: 50%;
+    top: -2rem;
+    /* transform: translateX(50%); */
+    cursor: pointer;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.product-content-bottom-top i{
+    display: block;
+    width: 3rem;
+    height: 3rem;
+    border: var(--border);
+    border-color: var(--dark-color);
+    background: #fff;
+    color: var(--dark-color);
+    border-radius: 50%;
+    text-align: center;
+    font-size: 2.2rem;
+    line-height: 3rem;
+    margin: .8rem .5rem 0;
+    justify-content: center;
+}
+.product-content-bottom-top:hover i{
+    background: var(--dark-color);
+    color: white;
+}
+.product-content-bottom-content-title{
+    border-top: 1px groove white;
+    border-bottom: 1px groove white;
+    display: flex;
+    font-size: 15px;
+    text-align: center;
+}
+.product-content-bottom-content-title-item{
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    cursor: pointer;
+
+}
+.product-content-bottom-content-title-item p{
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+
+
+.product-content-bottom-content{
+    padding-top: 30px;   
+    padding-left: 2rem;
+    font-size: 1.5rem;
+    padding-right: 2rem;
+}
+
+.product-content-bottom-content-gioithieu{
+    display: none;
+    text-transform: none;
+}
+.product-content-bottom-content-img{
+    display: none;
+}
+.product-content-bottom-content-title div:hover{
+    background: var(--green);
+    color: white;
+}
+.activeB{
+    display: none;
+}
+/*-----------------------cart---------------*/
+
+.Cart{
+    padding:10px;
+}
+.cart-top-wrap{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+ 
+}
+.cart-top{
+    height: 2px;
+    width: 70%;
+    background-color: #0b921d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 0px 80px;
+}
+.cart-top-item{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    background-color:#fff ;
+}
+i.cart-top-item {
+    font-size: 18px;
+    padding-top: 30%;
+    padding-bottom: 50%;
+    color: #d4d4d4;
+    
+}
+.cart-top-item i{
+    background: #99dba2;
+    color: #0b921d;
+    
+}
+
+/*--------------table left-----------*/
+.cart-content{
+    display: flex;
+    justify-content: center;
+
+
+
+}
+.cart-content-left {
+    flex:2;
+    margin: 0 10px 0 60px;
+   
+}
+.cart-content-left table{
+    width: 100%;
+    text-align: center;
+    border-radius: 3px;
+    background: #ffffff;
+ 
+
+}
+.cart-content-left table th {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-family: Arial;
+    border-bottom: 1px solid #ddd;  
+    padding: 10px 10px;  
+    color: #0b921d;
+    font-weight: bold;
+   
+}
+
+
+.cart-content-left table p{
+    font-size: 12px;
+    text-transform: uppercase;
+    font-family: Arial;
+    
+}
+.cart-content-left table input{
+    width: 30px;
+    text-align: center;
+    border-radius: 3px;
+    border: 1px solid;
+   
+}
+.cart-content-left table span{
+    font-size: 18px;
+    cursor: pointer;
+}
+.cart-content-left table td{
+    border-bottom: 1px solid #ddd;  
+    padding: 10px 0;  
+}
+
+.cart-content-left th:first-child, td:first-child{
+    width:20px;
+}
+.cart-content-left td:nth-child(2) img {
+    width: 80px;
+}
+/* .cart-content-left th:nth-child(2), td:nth-child(2){
+    max-width: 100px;
+} */
+
+
+/*-----------------table right-----------------*/
+.cart-content-right {
+    flex: 1;
+    padding: 0 40px 0 10px;
+    border-collapse: collapse;
+    border-left: 1px solid #d4d4d4 ;
+}
+.cart-content-right table{
+    width: 100%;
+    background: #ffffff;
+    border-radius: 3px;
+    
+}
+.cart-content-right table th {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-family: Arial;
+    border-bottom: 1px solid #ddd;  
+    padding: 10px 10px;  
+    color: #0b921d;
+    font-weight: bold;
+   
+}
+.cart-content-right table td{
+    font-size: 12px;
+    text-transform: uppercase;
+    font-family: Arial;
+    padding: 10px 10px 0 10px;
+}
+.cart-content-right table td:first-child{
+    font-weight: bold;
+
+}
+.cart-content-right table td:nth-child(2){
+    width: 100px;
+    text-align: right;
+}
+.cart-content-right table tr:nth-child(4) td{
+    border-bottom: 1px solid #ddd;  
+}
+
+.cart-content-right-text{
+    padding-bottom: 10px;
+    text-align: center;
+    color: #FE2727;;
+}
+.cart-content-right-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cart-content-right-button button{
+    padding: 0 15px;
+    height: 30px;
+    cursor: pointer;
+    border-radius: 2px;
+    margin: 10px 10px;
+    align-items: center;
+}
+.cart-content-right-button-shopping{
+    
+    background-color: #FFE4E1;   
+    border: 2px solid #ee4d2d;
+    width : 100px;
+}
+.cart-content-right-button-pay{
+    background-color: #ee4d2d;
+    border: 2px solid #ee4d2d;
+    width : 100px;
+    
+}
 
 /* ---------------------- footer ---------------------- start */
 
